bin/testsuite/tests/compiler/src/errors/compiler5143.swg
#global testerror "Err0332"
func1 hello(name) {
    return "hello" + name
}
